Fixed header z-index and excluded classy menu.css

--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -8,6 +8,7 @@ header .banner {
     position: fixed;
     background-color: rgba(0, 0, 0, .8);
     width: 100%;
+    z-index: 999;
 }
 
 header .banner .branding {
